# hugging-face-ground-truth-corpus

./: .gitignore  .pmat-gates.toml  ADVERSARIAL_UNICODE_FINDINGS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
.pmat/: project.toml
docs/: RED_TEAM_REFUTATION_REPORTS.md
docs/execution/: roadmap.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: hf-ground-truth-corpus.md
scripts/: dataset_card.md  export_corpus.py
src/hf_gtc/: __init__.py
src/hf_gtc/agents/: __init__.py  memory.py  planning.py  tools.py
src/hf_gtc/audio/: __init__.py  music.py  speech.py
src/hf_gtc/deployment/: __init__.py  compression.py  conversion.py  cost.py  gguf.py  merging.py  onnx.py  optimization.py  quantization.py  safetensors.py  serving.py  tflite.py  torchscript.py
src/hf_gtc/evaluation/: __init__.py  benchmarks.py  bias.py  calibration.py  comparison.py  editing.py  evaluate.py  harness.py  interpretability.py  leaderboards.py  metrics.py  profiling.py  robustness.py
src/hf_gtc/generation/: __init__.py  chat.py  constraints.py  diffusers.py  prompting.py  prompts.py  sampling.py  structured.py  tools.py
src/hf_gtc/hub/: __init__.py  cards.py  collections.py  datasets.py  experiments.py  model_cards.py  registry.py  search.py  spaces.py  telemetry.py  versioning.py
src/hf_gtc/inference/: __init__.py  batch.py  batching.py  caching.py  context.py  decoding.py  device.py  embeddings.py  engines.py  hardware.py  kv_cache.py  memory.py  optimization.py  pipelines.py  quantization.py  (+2 more)
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_activations.py  test_active_learning.py  test_adapters.py  test_analysis.py  test_architectures.py  test_attention.py  test_augmentation.py  test_batch.py  test_batching.py  test_benchmarks.py  test_bias.py  test_caching.py  test_calibration.py  test_callbacks.py  test_cards.py  test_chat.py  test_checkpointing.py  test_chunking.py  test_collators.py  test_collections.py  test_comparison.py  test_compression.py  test_constraints.py  test_context.py  test_continual.py  test_conversion.py  test_cost.py  test_curation.py  test_curriculum.py  test_datasets.py  test_debugging.py  test_decoding.py  test_device.py  test_diffusers.py  test_distillation.py  test_distributed.py  test_document.py  test_dpo.py  test_dynamics.py  (+92 more)
(+71 files in other folders)
